iphone blur fix

--- a/index.html
+++ b/index.html
@@ -14,7 +14,23 @@
     href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Manrope:wght@200..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:wght@500&family=Rubik+Doodle+Shadow&display=swap"
     rel="stylesheet">
 
+<!-- Google tag (gtag.js) -->
 
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FDJ52C15YJ"></script>
+
+<script>
+
+  window.dataLayer = window.dataLayer || [];
+
+  function gtag(){dataLayer.push(arguments);}
+
+  gtag('js', new Date());
+
+
+
+  gtag('config', 'G-FDJ52C15YJ');
+
+</script>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vite + React</title>
